Add Azure SQL DB and load script

--- a/docs/03_implement_function_calls/0301.md
+++ b/docs/03_implement_function_calls/0301.md
@@ -7,6 +7,9 @@ parent: 'Exercise 03: Implement function calling'
 
 # Task 01 - Create a customer account information API endpoint (20 minutes)
 
+TODO: fill in customer bookings SQL queries
+UI can have a graph showing bookings by month
+
 ## Introduction
 
 Azure OpenAI has the capacity to parse natural language and facilitate generating API calls through a mechanism known as function calling. Throughout the course of this exercise, you will create an API endpoint and then build the capacity to call this API endpoint based on user prompts.
