--- a/docs/03_implement_function_calls/0302.md
+++ b/docs/03_implement_function_calls/0302.md
@@ -5,6 +5,8 @@ nav_order: 2
 parent: 'Exercise 03: Implement function calling'
 ---
 
+TODO: Create Semantic Kernel orchestration and agent
+
 # Task 02 - Create a function call for the customer account information API endpoint (40 minutes)
 
 ## Introduction
