--- a/docs/02_implement_vector_search_in_cosmos_db_nosql/0202.md
+++ b/docs/02_implement_vector_search_in_cosmos_db_nosql/0202.md
@@ -31,27 +31,35 @@ The key tasks are as follows:
    1. Use breakpoints in the function's `Run` method to examine the input collection and processing that occurs as a new record is added.
    2. After starting a local debug session, insert the following document into the `MaintenanceRequests` container and observe the results of the function execution as your breakpoints are hit.
 
-        ```json
-        {
-          "hotel_id": 1, 
-          "hotel": "Oceanview Inn",
-          "source": "customer",
-          "date": "2024-08-10",
-          "details": "The air conditioning (A/C) unit in room 227 is malfunctioning and making a loud noise. Customer will be out of the room between 5:00 and 8:30 PM this evening. This needs immediate maintenance attention. If the issue cannot be resolved, we will need to move the customer to a new room.",
-          "room_number": 227
-        }
-        ```
+      ```json
+      {
+        "hotel_id": 1, 
+        "hotel": "Oceanview Inn",
+        "source": "customer",
+        "date": "2024-08-10",
+        "details": "The air conditioning (A/C) unit in room 227 is malfunctioning and making a loud noise. Customer will be out of the room between 5:00 and 8:30 PM this evening. This needs immediate maintenance attention. If the issue cannot be resolved, we will need to move the customer to a new room.",
+        "room_number": 227
+      }
+      ```
 
    3. Once the function execution completes, examine the document in Cosmos DB and inspect the vector embeddings inserted into `request_vector` field of the document.
-4. Use VS Code to deploy the function to a new Azure Function App in your resource group and add the required app configuration settings.
-5. Navigate to the live screen and watch the logs.
+4. Use VS Code to deploy the function to the Azure Function App in your resource group and add the required app configuration settings.
+5. Verify the deployed function is working correctly by inserting the following record into the `MaintenanceRequests` container in Cosmos DB. Use the Log Stream for the Function App to observe the output.
+
+    ```json
+    {
+      "hotel_id": 12, 
+      "hotel": "The Downtown Plaza Hotel",
+      "source": "customer",
+      "date": "2024-08-11",
+      "details": "The thermostat does not appear to be working in room 328, and the air conditioning (A/C) unit will not turn on to cool down the room.",
+      "room_number": 328
+    }
+    ```
+
 6. Populate the `MaintenanceRequests` container with data from the `PropertyMaintenance.json` file in the [/src/data folder](https://github.com/microsoft/TechExcel-Integrating-Azure-PaaS-and-AI-Services-for-AI-Design-Wins/tree/main/src/data) of the repository.
-7. Observe the files being processed.
-8. Review data in data explorer to confirm the function is correctly populating the `request_vector` field for newly added documents.
-9. Execute a `VectorDistance()` query via Data Explorer.
-   1. Create new query.
-   2. Add query below...
-   3. Observe results and `SimilarityScore` values.
+7. Observe the files being processed in the Log Stream and review documents in the Cosmos DB Data Explorer to confirm the function is correctly populating the `request_vector` field for newly added documents.
+8. Execute a query to find documents similar to "air conditioning malfunction" using the `VectorDistance()` function via Cosmos DB Data Explorer. You can find the vector embeddings for "air conditioning malfunction" in the `Query_Vector.txt` file in the [/src/data folder](https://github.com/microsoft/TechExcel-Integrating-Azure-PaaS-and-AI-Services-for-AI-Design-Wins/tree/main/src/data).
 
 ## Success Criteria
 
@@ -64,9 +72,13 @@ The key tasks are as follows:
 - [What are vector embeddings?](https://learn.microsoft.com/azure/cosmos-db/gen-ai/vector-embeddings)
 - [Understand embeddings in Azure OpenAI service](https://learn.microsoft.com/azure/ai-services/openai/concepts/understand-embeddings)
 - [Azure OpenAI embeddings models](https://learn.microsoft.com/azure/ai-services/openai/concepts/models#embeddings-models)
+- [Learn how to generate embeddings with Azure OpenAI](https://learn.microsoft.com/azure/ai-services/openai/how-to/embeddings?tabs=csharp)
 - [VectorDistance (NoSQL query)](https://learn.microsoft.com/azure/cosmos-db/nosql/query/vectordistance)
 - [OpenAI Inference](https://learn.microsoft.com/dotnet/api/overview/azure/ai.openai-readme?view=azure-dotnet-preview)
 - [AzureOpenAIClient class](https://learn.microsoft.com/dotnet/api/azure.ai.openai.azureopenaiclient?view=azure-dotnet-preview)
+- [Serverless event-based architectures with Azure Cosmos DB and Azure Functions](https://learn.microsoft.com/azure/cosmos-db/nosql/change-feed-functions)
+- [Connect Azure Functions to Azure Cosmos DB using Visual Studio Code](https://learn.microsoft.com/azure/azure-functions/functions-add-output-binding-cosmos-db-vs-code?pivots=programming-language-csharp)
+- [Azure Cosmos DB output binding for Azure Functions](https://learn.microsoft.com/azure/azure-functions/functions-bindings-cosmosdb-v2-output?tabs=python-v2%2Cisolated-process%2Cnodejs-v4%2Cextensionv4&pivots=programming-language-csharp)
 
 ## Solution
 
@@ -105,12 +117,12 @@ The key tasks are as follows:
     - Copy the value of **KEY 1** and paste it into the `AzureOpenAIKey` value of the `local.settings.json` file.
     - Copy the value of **Endpoint** and paste it into the `AzureOpenAIEndpoint` value.
 
-      ![The Azure OpenAI Keys and Endpoint page is displayed, with the copy buttons for KEY 1 and Endpoint highlighted.](0202-azure-openai-keys-and-endpoint.png)
+      ![The Azure OpenAI Keys and Endpoint page is displayed, with the copy buttons for KEY 1 and Endpoint highlighted.](../../media/Solution/0202-azure-openai-keys-and-endpoint.png)
 
   - Return to your resource group and select the Azure Cosmos DB resource.
     - Under the **Settings** menu, select **Keys**, then show and copy the **PRIMARY CONNECTION STRING** value and paste it as the `CosmosDBConnectionString` value in the `local.settings.json` file.
   
-      ![They Azure Cosmos DB account Keys page is displayed, with the PRIMARY CONNECTION STRING copy button highlighted.](0202-azure-cosmos-db-keys.png)
+      ![They Azure Cosmos DB account Keys page is displayed, with the PRIMARY CONNECTION STRING copy button highlighted.](../../media/Solution/0202-azure-cosmos-db-keys.png)
 
   - The `DeploymentName` value is preset, based on the deployment created by the Bicep script. If that value differs in your environment, you will need to update this settings accordingly.
 
@@ -140,15 +152,46 @@ The key tasks are as follows:
   - Return to the Cosmos DB **Data Explorer** in the Azure portal and select the document that was inserted into the `MaintenanceRequests` container. Inspect the `request_vector` property to review the structure of the generated vector embeddings. Also, note the `type` field has been set to "Vectorized."
   - Return to Visual Studio Code and select "Shift+F5" on the keyboard to stop the function app debug session.
 
-**TODO**:
+- The steps to deploy the function to Azure are as follows:
+  - In Visual Studio Code, open a new terminal window and change the directory to the `src/ContosoSuitesVectorizationFunction` project folder.
+  - At the terminal prompt, execute the following command to build a release version of the function:
 
-1. Write steps for deploying the function app, then uploading the `PropertyMaintenance.json` file in Cosmos Data Explorer and looking at the logs and data in Cosmos.
-2. Write steps for executing a `VectorDistance()` query in the Data Explorer.
+    ```bash
+    dotnet build --configuration Release
+    ```
 
-- To deploy the function to Azure:
-  - TODO: Configure app settings by uploading the `local.settings.json` file to the Azure Function...
+  - In the explorer pane in Visual Studio Code, navigate to the `src/ContosoSuitesVectorizationFunction\bin\Release\net8.0` folder, then right-click on the `publish` folder and in the context menu, select **Deploy to Function App**.
+  - In the **Select Function App** command pallet dialog that appears at the top of Visual Studio Code:
+    - Select the subscription you are using for this exercise.
+    - Choose the function app in your resource group.
+  - Select **Deploy** in the Visual Studio Code dialog asking about deploying and overwriting previous deployments.
+  - Use the **Output** window at the bottom of Visual Studio Code to monitor the deployment.
+  - When the deployment completes, you will get a notification in the bottom right-hand corner of Visual Studio Code. In this notification window, select **Upload settings**. This will upload the values from the `local.settings.json` file into environment variables in your function app.
 
-- To upload the `PropertyMaintenance.json` data file provided by Contoso Suites and bulk insert maintenance requests into the `MaintenanceRequests` container in your Azure Cosmos DB, use the Data Explorer.
+    ![The Upload settings button is highlighted on the deployment completed notification dialog.](../../media/Solution/0202-azure-function-deployment-upload-settings.png)
+
+  - Confirm the settings were uploaded correctly by navigating to the **Settings** menu of your function app in the [Azure portal](https://portal.azure.com/) and selecting **Environment variables**. You should see the `AzureOpenAIEndpoint`, `AzureOpenAIKey`, `CosmosDBConnectionString`, and `DeploymentName` settings, along with other settings added by the Bicep script and deployment process.
+
+- To verify the function app was deployed successfully and is working correctly:
+  - Open the Log Stream for the Function App by select **Log Stream** under **Monitoring** in the left-hand menu of the Function App page in the [Azure portal](https://portal.azure.com/).
+  - Open a new browser window or tab and navigate to the `MaintenanceRequests` container in your Cosmos DB account, and select `Items`.
+  - Insert the following record into the `MaintenanceRequests` container in Cosmos DB.
+
+    ```json
+    {
+      "hotel_id": 12, 
+      "hotel": "The Downtown Plaza Hotel",
+      "source": "customer",
+      "date": "2024-08-11",
+      "details": "The thermostat does not appear to be working in room 328, and the air conditioning (A/C) unit will not turn on to cool down the room.",
+      "room_number": 328
+    }
+    ```
+
+  - Return to the Function Apps **Log Stream** browser window and observe the logs to ensure you see the function execute and see that it generated vector embeddings for the maintenance request.
+  - Return to the Cosmos DB `MaintenanceRequests` browser window and select the request item that was just inserted to make sure it refreshes and contains a `request_vector` value.
+
+- To populate the `MaintenanceRequests` container with data from the `PropertyMaintenance.json` file provided by Contoso Suites, use the Data Explorer.
   - In the [Azure portal](https://portal.azure.com), navigate to your Cosmos DB resource and select **Data Explorer** in the left-hand menu.
   - In the Data Explorer, expand the **ContosoSuites** database and the **MaintenanceRequests** container, then select **Items**.
 
@@ -156,13 +199,49 @@ The key tasks are as follows:
 
   - Select **Upload Item** on the toolbar.
 
-    ![The Upload Item button on the Azure Cosmos DB toolbar is highlighted.](../../media/Solution/0201-azure-cosmos-db-toolbar-upload-item.png)
+    ![The Upload Item button on the Azure Cosmos DB toolbar is highlighted.](../../media/Solution/0202-azure-cosmos-db-toolbar-upload-item.png)
 
   - In the **Upload Items** dialog, select the browse button and navigate to the `PropertyMaintenance.json` file in the `/src/data` directory in the location where cloned the repository, then select **Upload** to import the data in the file.
 
     ![The Upload Items dialog is displayed with the browse and Upload buttons highlighted. UserReviews.json appears in the Select JSON files box.](../../media/Solution/0202-upload-items-property-maintenance.png)
 
-- After ingestion and processing is complete, you can ask questions of the uploaded dataset.
-  - TODO: Write steps for creating a new query in the data explorer, pasting a query that uses the vector distance function, and review the output.
+  - Return to the Function Apps **Log Stream** browser window you opened in the previous step and observe the logs as the maintenance request are bulk uploaded and processed.
+  - Return to the Cosmos DB `MaintenanceRequests` browser window, close the upload dialog, and select the refresh icon on the MaintenanceRequests>Items tab in the Data Explorer.
+
+    ![The refresh button is highlighted on the Maintenance->Items tab in Data Explorer.](../../media/Solution/0202-azure-cosmos-db-maintenance-requests-items-refresh.png)
+
+  - Select a few random request items to ensure they contain a `request_vector` value and have a `type` of "Vectorized".
+
+- To execute a query using the `VectorDistance()` function for "air conditioning malfunction":
+  - In the [Azure portal](https://portal.azure.com), navigate to your Cosmos DB resource and select **Data Explorer** in the left-hand menu.
+  - In the Data Explorer, expand the **ContosoSuites** database and the **MaintenanceRequests** container, then select **Items**.
+  - On the toolbar, select **New SQL Query**.
+
+    ![The New SQL Query button on the Data Explorer Items toolbar is highlighted.](../../media/Solution/0202-azure-cosmos-db-data-explorer-items-new-sql-query.png)
+
+  - In the new query window, paste in the following query:
+
+    ```sql
+    SELECT c.hotel_id, c.hotel, c.details, VectorDistance(c.request_vector, <QUERY_VECTOR>) AS SimilarityScore
+    FROM c
+    ```
+
+  - Replace the `<QUERY_VECTOR>` token in the query with the vectorized representation of "air conditioning malfunction," which you can find in the `Query_Vector.txt` file in the [/src/data folder](https://github.com/microsoft/TechExcel-Integrating-Azure-PaaS-and-AI-Services-for-AI-Design-Wins/tree/main/src/data). Copy the entire contents of the file, and paste it into the query in place of `<QUERY_VECTOR>`.
+  - Select **Execute Query** on the toolbar and observe the output in the **Results** panel. You should see results similar to the following:
+
+    ```json
+    {
+        "hotel_id": 12,
+        "hotel": "The Downtown Plaza Hotel",
+        "details": "The thermostat does not appear to be working in room 328, and the air conditioning (A/C) unit will not turn on to cool down the room.",
+        "SimilarityScore": 0.8774162384443005
+    },
+    {
+        "hotel_id": 1,
+        "hotel": "Oceanview Inn",
+        "details": "The air conditioning (A/C) unit in room 105 is malfunctioning and making a loud noise. This needs maintenance attention.",
+        "SimilarityScore": 0.895450004671674
+    }
+    ```
 
 </details>
