Add resources for exercise 3

--- a/docs/03_implement_function_calls/0301.md
+++ b/docs/03_implement_function_calls/0301.md
@@ -1,50 +1,45 @@
 ---
-title: '1. Create a customer account information API endpoint'
+title: '1. Prepare an Azure SQL Database'
 layout: default
 nav_order: 1
 parent: 'Exercise 03: Implement function calling'
 ---
 
-# Task 01 - Create a customer account information API endpoint (20 minutes)
-
-TODO: fill in customer bookings SQL queries
-UI can have a graph showing bookings by month
+# Task 01 - Prepare an Azure SQL Database (20 minutes)
 
 ## Introduction
 
-Azure OpenAI has the capacity to parse natural language and facilitate generating API calls through a mechanism known as function calling. Throughout the course of this exercise, you will create an API endpoint and then build the capacity to call this API endpoint based on user prompts.
+The Contoso Suites team is interested in learning how they can use Semantic Kernel to extend their application capabilities. The development team is currently responsible for creating any new API endpoints that end users will consume through front-end applications, but a common complaint is that the turnaround time for new API endpoint is too slow. The development team is interested in learning more about Semantic Kernel and whether it could be a viable solution for their problem.
+
+Throughout the course of this exercise, you will complete a simple Web API to support database calls. Then, you will implement a Semantic Kernel plugin to enable arbitrary database query generation (of `SELECT` statements), and display the results as a table in the front-end application.
 
 ## Description
 
-In this task, you will load data that Contoso Suites staff has provided to you into Cosmos DB. This data contains a sample of customer account details from their Customer Information System (CIS). From there, they would like you to implement a .NET Web API endpoint exposing this customer information.
+In this task, you will load data that Contoso Suites staff has provided to you into Azure SQL DB. This data contains a sample of customer, hotel, and bookings data from their SQL Server-based bookings system. From there, they would like you to implement a .NET Web API endpoint exposing this customer information. They have provided you with most of the code but did not have time to complete the task.
 
 The key tasks are as follows:
 
-1. Import the data in Customers.json into a Cosmos DB database named ContosoSuites and a collection named Customers.
-
-    {: .note }
-    > The value for DateOfMostRecentStay is in the format yyyy-mm-dd. JSON does not include a native DateTime type, so Cosmos DB stores dates as strings. For date operators like `>` or `<` to work, we need to ensure date values are stored in lexicographic order, so common formats such as mm/dd/yyyy or dd/mm/yyyy would not work.
-
-2. Create a new environment variable on your machine called `AZURE_COSMOS_DB_CONNECTION_STRING`. This should host the connection string for the Cosmos DB resource you have created.
+1. Add your IP address to your Azure SQL Server's firewall allow list and also enable the **Allow Azure services and resources to access this server** setting.
+2. Connect to your remote Azure SQL Database and run the script in `src/data/BookingsHistory.sql` against that database, creating several tables and populating them with sample data.
+3. Create an environment variable locally called `AZURE_SQL_DB_CONNECTION_STRING`, containing the connection string for your Azure SQL DB. Use SQL authentication. By default, the user ID is `contosoadmin` and the database name is `ContosoSuitesBookings`. The password is whatever you set it to be in Exercise 1. Be sure to set the `Encrypt` and `TrustServerCertificate` settings to **True**.
 
     {: .note }
     > After creating an environment variable, you will need to close and re-open your terminal to refresh the list of environment variables. If you are using Visual Studio Code to run this code base, you may need to close and re-open all open instances of VS Code, as instantiating a new terminal might not refresh the list of environment variables.
 
-3. Using the Web API project **ContosoSuitesWebAPI**, update the stub `app.MapGet()` endpoint to retrieve customer information based on two inputs. The first is a string called `searchCriterion` and may be one of the three following values: **CustomerName**, **LoyaltyTier**, **DateOfMostRecentStay**. The second is a string called `searchValue` and will be what we use to determine relevant documents. There are stub methods in `CosmosService.cs` that will help you implement this customer account lookup endpoint.
-4. Run the Web API service on your machine using `dotnet run` if you are in Visual Studio Code or running the project locally in Visual Studio. Once it is running, should be able to make a web request in your browser by navigating to `http://{your_url}/Customer/?searchCriterion={search_criterion}&searchValue={search_value}`, filling in appropriate values for `{your_url}`, `{search_criterion}`, and `{search_value}`.
+4. Complete the function mappings in `src/ContosoSuitesWebAPI/Program.cs` for the `/Hotels/` endpoints. Each endpoint should call the relevant database service and return the results of the appropriate method.
+5. Build and run the Web API service locally. Connect to the URL provided in the **"Now listening on:"** line and navigate to the `/Hotels` endpoint. For example, if your host is localhost and on port 5292, navigate to `http://localhost:5292/Hotels`. You should see a list of four hotels. Test the other two endpoints as well.
+6. Open the Streamlit application and navigate to the **API Integration** page. You should see a drop-down list asking you to select a hotel, followed by a table of bookings for that hotel.
 
     {: .note }
-    > When you run the Web API service in debug mode, keep track of the port it runs on. You will need this information in the next task.
+    > You may need to change the `[api].[endpoint]` key in your `secrets.toml` file to point to your local Web API service, rather than the App Service deployment.
 
-5. Perform a lookup against the Customers collection based on the search criterion and search value, returning all relevant documents. Sample queries include:
-   1. **searchCriterion** = `CustomerName` and **searchValue** = `Amber Rodriguez`
-   2. **searchCriterion** = `LoyaltyTier` and **searchValue** = `Platinum`
-   3. **searchCriterion** = `DateOfMostRecentStay` and **searchValue** = `2023-10-06`
+7. Deploy your App Service code changes and ensure they propagate to Azure App Services. Then, add a new connection string to the App Service's environment variables called `AZURE_SQL_DB_CONNECTION_STRING`. The Value should be the value of your connection string and the Type should be **SQLServer**.
+8. Test your deployed Streamlit application and ensure that it is able to load the hotels drop-down list and bookings table as expected.
 
 ## Success Criteria
 
-- You have created a Cosmos DB collection named Customers.
-- You have updated the .NET Web API endpoint to allow querying against the Customers collection.
+- You have created a series of tables in the ContosoSuitesBookings Azure SQL Database.
+- You have updated the .NET Web API endpoint to allow querying against hotel and bookings data.
 
 ## Tips
 
@@ -52,14 +47,12 @@ The key tasks are as follows:
 
 ## Learning Resources
 
-- [Quickstart: Create an Azure Cosmos DB account, database, container, and items from the Azure portal](https://learn.microsoft.com/azure/cosmos-db/nosql/quickstart-portal)
-- [Tutorial: Create a web API with ASP.NET Core](https://learn.microsoft.com/aspnet/core/tutorials/first-web-api)
-- [Configuration in ASP.NET Core](https://learn.microsoft.com/aspnet/core/fundamentals/configuration/?view=aspnetcore-8.0)
-- [Query items in Cosmos DB from .NET](https://learn.microsoft.com/azure/cosmos-db/nosql/quickstart-dotnet?tabs=try-free&pivots=azd#query-items)
-- [cosmos-db-nosql-dotnet-sample-web](https://github.com/Azure-Samples/cosmos-db-nosql-dotnet-sample-web/tree/sample)
-- [Tutorial: Develop an ASP.NET web application with Azure Cosmos DB for NoSQL](https://learn.microsoft.com/azure/cosmos-db/nosql/tutorial-dotnet-web-app)
+TODO!
 
 ## Solution
+
+TODO: fill in customer bookings SQL queries
+UI can have a table of bookings
 
 <details markdown="block">
 <summary>Expand this section to view the solution</summary>
