--- a/docs/03_implement_function_calls/0302.md
+++ b/docs/03_implement_function_calls/0302.md
@@ -6,6 +6,7 @@ parent: 'Exercise 03: Implement function calling'
 ---
 
 TODO: Create Semantic Kernel orchestration and agent
+TODO: update UI to accept natural language & output results
 
 # Task 02 - Create a function call for the customer account information API endpoint (40 minutes)
 
