--- a/docs/03_implement_function_calls/0302.md
+++ b/docs/03_implement_function_calls/0302.md
@@ -1,54 +1,67 @@
 ---
-title: '2. Create a function call for the customer account information API endpoint'
+title: '2. Create a function call to retrieve bookings information'
 layout: default
 nav_order: 2
 parent: 'Exercise 03: Implement function calling'
 ---
 
-TODO: Create Semantic Kernel orchestration and agent
-TODO: update UI to accept natural language & output results
-
 # Task 02 - Create a function call for the customer account information API endpoint (40 minutes)
 
 ## Introduction
 
-Function calling is a feature in OpenAI and the Azure OpenAI Service. It provides the ability to produce structured JSON outputs based on functions you describe in a request. This allows organizations to extract key components needed for API calls from natural language communication and augment native chat capabilities.
+Using the Semantic Kernel library, you can translate natural language input into a function call. This allows organizations to extend existing code bases and APIs with a natural language front end.
 
 ## Description
 
-In the prior task, you created an endpoint for accessing customer account information from Cosmos DB. In this task, you will show the power of function calling in Azure OpenAI Service by creating a chat completion that enables looking up customer details by name, loyalty tier, or most recent stay.
+In the prior task, you populated bookings history data in Azure SQL Database and built three endpoints on top of it. The Contoso Suites development team would like to continue building API endpoints, but want to take advantage of natural language capabilities to make front-end development easier. In this task, you will use the Semantic Kernel library to make the database service calls into kernel functions that can run based on user request.
 
 The key tasks are as follows:
 
-1. In the Streamlit app's `1_Chat_with_Data.py` file, fill in the `functions` list with a GPT function definition called "get_customers" that takes two parameters: `searchCriterion` and `searchValue`. The `searchCriterion` parameter should be an enumeration containing three values: **CustomerName**, **LoyaltyTier**, and **DateOfMostRecentStay**.
-2. Add code to the dashboard that converts the GPT function into an Azure OpenAI function definition and executes the customer lookup request. To do this, you will complete the functions named `get_customers()`, `create_chat_completion_with_functions()`, and `handle_chat_prompt_with_functions()`.
+1. Add three local secrets using `dotnet user-secrets`. They should be named `AzureOpenAI:DeploymentName`, `AzureOpenAI:Endpoint`, and `AzureOpenAI:ApiKey`, and these secret names are case-sensitive.
+2. The `DatabaseService` class and `IDatabaseService` interface have three methods associated with them. Contoso Suites would like to add two more methods. One will be called `GetBookingsMissingHotelRooms()` and will return all bookings that do not have associated hotel rooms. The second will be called `GetBookingsWithMultipleHotelRooms()` and will return all bookings with more than one hotel room. Neither method should take an input parameter, and you will not need to add explicit endpoints for these.
+3. Add the Semantic Kernel NuGet package to the Web API project.
+4. Tag each of the methods in the `DatabaseService` class as kernel functions and provide a description for each method and input parameter.
+5. The `AppConfig.cs` file contains a simple configuration class. Update the `Program.cs` file to use this configuration class to build out a configuration. Add in any user secrets associated with the (implicit) `Program` class as well as environment variables, and then validate the configuration.
+6. In `Program.cs`, add a singleton of type `Microsoft.SemanticKernel.Kernel`. It should create an `IKernelBuilder` and then add Azure OpenAI chat completion, using the deployment name, endpoint, and API key from your configuration. It should also add as a plugin everything in the `DatabaseService` class.
+7. Implement the `/Chat` POST request. It should use the `Kernel` singleton and get chat message content from the chat completion service. Return to the end user `response?.Content!`.
+8. Run the Web API project and ensure that things work correctly. You can perform a simple test in PowerShell using the following request.
 
-    {: .note }
-    > For the `full_server_url` in the `get_customers()` function, part of the required answer is to provide the IP address and port that your .NET Web API service is running on. This .NET Web API service should be running while you go through this exercise.
+    ```powershell
+    $postParams = @{ message="Which bookings do not currently have hotel rooms associated with them?" }
+    Invoke-WebRequest -Uri http://localhost:5292/Chat -Method POST -Body $postParams
+    ```
 
-3. After loading the Streamlit app, ensure that you are on the "Chat with Data" page. Then, select the **Chat with Data** radio button option and ask the following question: "Our family is celebrating my mother's 90th birthday and we want to have that celebration in Aruba. Do you have a hotel that can accommodate 19 room rentals? And are there any reception rooms at that hotel?"
-4. Continue the chat conversation with this follow-up: "What other amenities does that hotel have?"
-5. Switch the radio button to "Function Calls" and then ask the question, "Which customers are in the Gold tier?" Ensure that Streamlit returns the response as a table.
-6. Continue asking questions to ensure that you can successfully look up customers by name, loyalty tier, and date of most recent stay.
+    Change the `-Uri` parameter as needed, if your local port is not 5292.
+9. With the Web API package running, run your Streamlit front end and navigate to the **API Integration** page. Ask the following questions and ensure that you get back the results you expect.
+   1. Please show me the bookings for hotel 3 for any date later than December 1, 2024.
+   2. Which bookings currently do not have hotel rooms assigned to them?
+   3. How many bookings have included at least two hotel rooms?
+10. Deploy your App Service code changes and ensure they propagate to Azure App Services. Then, add a three new environment variables to the App Service: `AzureOpenAI__DeploymentName`, `AzureOpenAI__Endpoint`, and `AzureOpenAI__ApiKey`. These environment variables should have **two** underscores between "AzureOpenAI" and the name.
+
+    {: .important }
+    > In a production environment, it would be better to save these as secrets in Azure Key Vault and then enable a managed identity to access the Key Vault secrets from your App Service. The reason for this is, with the current configuration, anyone with access to manage the App Service can view the deployment name, endpoint, and API key secrets.
+
+11. Test your deployed Streamlit application and ensure that it is able to answer user questions about bookings as expected.
 
 ## Success Criteria
 
-- You have filled out the Exercise 03 functions on the Streamlit dashboard.
-- You are able to load customer data by full name, loyalty tier, and date of most recent stay when you select the "Function Calls" radio button.
-- You are also able to chat regarding hotel and resort information when selecting the "Chat with Data" radio button.
+- You have added two new methods to the `IDatabaseService` interface and its associated `DatabaseService` class.
+- You have implemented the Chat endpoint and can call any of the `DatabaseService` functions.
+- You are able to interact with the Chat endpoint from the **API Integration** page in Streamlit.
 
 ## Learning Resources
 
-- [Function calling is now available in Azure OpenAI Service](https://techcommunity.microsoft.com/t5/ai-azure-ai-services-blog/function-calling-is-now-available-in-azure-openai-service/ba-p/3879241)
-- [How to use function calling with Azure OpenAI Service](https://learn.microsoft.com/azure/ai-services/openai/how-to/function-calling?tabs=python)
-- [Function calling examples](https://github.com/Azure-Samples/openai/tree/main/Basic_Samples/Functions)
-- [Azure OpenAI Service REST API reference](https://learn.microsoft.com/azure/ai-services/openai/reference)
+TODO!
+
+- [Booking Restaurant - Demo Application](https://github.com/microsoft/semantic-kernel/tree/main/dotnet/samples/Demos/BookingRestaurant)
 
 ## Tips
 
-- The way to reference response objects in Azure OpenAI has changed with recent versions of the Azure OpenAI API, so if you are looking at older examples online, you might need to make minor changes to your code to be compliant with the new API format. For example, instead of reading `response["choices"][0]["message"]`, you would reference `response.choices[0].message`.
+- The Semantic Kernel .NET library is rapidly changing, and some examples you may find online relate to the old methods for interacting with Semantic Kernel. Furthermore, if you are using GitHub Copilot to assist with development, it may provide you with code that no longer functions with recent versions of Semantic Kernel. Be sure to use recent code examples as guidance.
 
 ## Solution
+
+TODO!
 
 <details markdown="block">
 <summary>Expand this section to view the solution</summary>
