Add instructions and solution for 3.1

--- a/docs/03_implement_function_calls/0301.md
+++ b/docs/03_implement_function_calls/0301.md
@@ -47,108 +47,68 @@ The key tasks are as follows:
 
 ## Learning Resources
 
-TODO!
+- [Azure SQL Database and Azure Synapse IP firewall rules](https://learn.microsoft.com/azure/azure-sql/database/firewall-configure?view=azuresql)
+- [Environment variables and app settings in Azure App Service](https://learn.microsoft.com/azure/app-service/reference-app-settings?tabs=kudu%2Cdotnet)
 
 ## Solution
-
-TODO: fill in customer bookings SQL queries
-UI can have a table of bookings
 
 <details markdown="block">
 <summary>Expand this section to view the solution</summary>
 
-- To create the Cosmos DB container, perform the following steps:
-  - In the Azure portal, navigate to the Cosmos DB service associated with your resource group.
-  - Select the **Data Explorer** option from the top menu.
-  - In the Data Explorer, select the **New Container** button in the middle of the screen.
-  - Create a new database and give it a name of `ContosoSuites`. You may safely set the database throughput either to `Autoscale` with a Database Max RU/s of `1000`, or `Manual` with a Database RU/s of `400`.
-  - The new Container id should be called `Customers`. Choose a partition key, such as `/FullName` and select **OK** to create the database and container.
+- To add your IP address to the Azure SQL Server's firewall allow list, first navigate to [the Azure portal](https://portal.azure.com). From there, find your resource group and select the **SQL server** service. In the **Security** menu on the left-hand side, choose the **Networking** option. Then, select the **Add your client IPv4 address** option in the **Firewall rules** heading. Select the **Allow Azure services and resources to access this server** checkbox and then select **Save** to save your changes.
 
-    ![Create a new container called Customers](../../media/Solution/0301_NewContainer.png)
+    ![Allow your machine and Azure resources to connect to this Azure SQL Server.](../../media/Solution/0301_Networking.png)
 
-- After container creation finishes, import customer data using the Data Explorer:
-  - In the Data menu tree for the NoSQL API left-hand menu, drill into **ContosoSuites**, then **Customer**, and finally select the Items menu option.
-  - Choose the **Upload Item** menu option. Navigate to where you have saved the file "Customer.json" and upload it.
-  - Uploading will succeed and import 77 entries.
-
-    ![Upload the sample customers into Cosmos DB](../../media/Solution/0301_CustomerUpload.png)
-
-- Create an environment variable locally, giving it the name `AZURE_COSMOS_DB_CONNECTION_STRING`. There are several ways to create an environment variable, including `setx` in the Windows command shell, the `$env` variable in PowerShell, and the **Environment Variables** option in the **Advanced** tab of System Properties.
+- If you have a tool such as SQL Server Management Studio or Azure Data Studio already installed, you can connect to your Azure SQL Database via its endpoint--the server name in your SQL connection string. If you do not have a database tool installed, navigate to the **ContosoSuitesBookings** database in your resource group. Then, on the left-hand menu, select the **Query editor (preview)** menu option. Log in with your SQL user name (`contosoadmin` by default) and password. From there, you can paste the contents of `src/data/BookingsHistory.sql` to create the bookings history tables and load them with sample data.
+- Create an environment variable locally, giving it the name `AZURE_SQL_DB_CONNECTION_STRING`. There are several ways to create an environment variable, including `setx` in the Windows command shell, the `$env` variable in PowerShell, and the **Environment Variables** option in the **Advanced** tab of System Properties.
 
     To perform this in PowerShell, you can run the following command:
 
     ```powershell
-    $env:AZURE_COSMOS_DB_CONNECTION_STRING = 'AccountEndpoint=https://{your_endpoint}.documents.azure.com:443/;AccountKey={your_key};'
+    $env:AZURE_SQL_DB_CONNECTION_STRING = 'Server=tcp:{your server}.database.windows.net,1433;Initial Catalog=ContosoSuitesBookings;Persist Security Info=False;User ID=contosoadmin;Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;'
     ```
 
     Should you wish to create an environment variable using the System Properties user interface, it is possible to do this as well.
 
     ![Creating a new environment variable in Windows](../../media/Solution/0301_EnvironmentVariable.png)
 
-- The final code to support customer lookup should look something like this.
-  - Here is the code for the four functions in `CosmosService.cs`:
+    {: .note }
+    > After creating an environment variable, you will need to close and re-open your terminal to refresh the list of environment variables. If you are using Visual Studio Code to run this code base, you may need to close and re-open all open instances of VS Code, as instantiating a new terminal might not refresh the list of environment variables.
+- The completed code for the three Hotels endpoints in `Program.cs` are as follows:
 
-  ```csharp
-  public async Task<IEnumerable<Customer>> GetCustomersByName(string name)
-      {
-          var queryable = container.GetItemLinqQueryable<Customer>();
-          using FeedIterator<Customer> feed = queryable
-              .Where(c => c.FullName == name)
-              .ToFeedIterator<Customer>();
-          return await ExecuteQuery(feed);
-      }
+    ```csharp
+    app.MapGet("/Hotels", async () => 
+    {
+        var hotels = await app.Services.GetRequiredService<IDatabaseService>().GetHotels();
+        return hotels;
+    })
+        .WithName("GetHotels")
+        .WithOpenApi();
+    
+    app.MapGet("/Hotels/{hotelId}/Bookings/", async (int hotelId) => 
+    {
+        var bookings = await app.Services.GetRequiredService<IDatabaseService>().GetBookingsForHotel(hotelId);
+        return bookings;
+    })
+        .WithName("GetBookingsForHotel")
+        .WithOpenApi();
+    
+    app.MapGet("/Hotels/{hotelId}/Bookings/{min_date}", async (int hotelId, DateTime min_date) => 
+    {
+        var bookings = await app.Services.GetRequiredService<IDatabaseService>().GetBookingsByHotelAndMinimumDate(hotelId, min_date);
+        return bookings;
+    })
+        .WithName("GetRecentBookingsForHotel")
+        .WithOpenApi();
+    ```
 
-      public async Task<IEnumerable<Customer>> GetCustomersByLoyaltyTier(string loyaltyTier)
-      {
-          LoyaltyTier lt = Enum.Parse<LoyaltyTier>(loyaltyTier);
-          var queryable = container.GetItemLinqQueryable<Customer>();
-          using FeedIterator<Customer> feed = queryable
-              .Where(c => c.LoyaltyTier.ToString() == loyaltyTier)
-              .ToFeedIterator<Customer>();
-          return await ExecuteQuery(feed);
-      }
+- In order to create an environment variable for your App Service, perform the following actions.
+  - Navigate back to your resource group in the Azure Portal. Then, select the **App Service** named `{your_unique_id}-api`. In the **Settings** menu, choose the **Environment variables** option. Then, navigate to the **Connection strings** tab and select the **Add** button.
 
-      public async Task<IEnumerable<Customer>> GetCustomersWithStaysAfterDate(DateTime dt)
-      {
-          var queryable = container.GetItemLinqQueryable<Customer>();
-          using FeedIterator<Customer> feed = queryable
-              .Where(c => c.DateOfMostRecentStay > dt)
-              .ToFeedIterator<Customer>();
-          return await ExecuteQuery(feed);
-      }
+     ![Creating a new environment variable for an Azure App Service](../../media/Solution/0301_AddEnvironmentVariable1.png)
 
-      private async Task<IEnumerable<Customer>> ExecuteQuery(FeedIterator<Customer> feed)
-      {
-          List<Customer> results = new();
-          while (feed.HasMoreResults)
-          {
-              var response = await feed.ReadNextAsync();
-              foreach (Customer c in response)
-              {
-                  results.Add(c);
-              }
-          }
-          return results;
-      }
-  ```
+  - Enter `AZURE_SQL_DB_CONNECTION_STRING` as the Name and then fill in your connection string for Value. For Type, select **SQLServer** from the drop-down. Then, select the **Save** button to save this environment variable.
 
-  - Here is the code for Program.cs:
-
-  ```csharp
-  app.MapGet("/Customer", async (string searchCriterion, string searchValue) => 
-  {
-      switch (searchCriterion)
-      {
-          case "CustomerName":
-              return await app.Services.GetService<ICosmosService>()!.GetCustomersByName(searchValue);
-          case "LoyaltyTier":
-              return await app.Services.GetService<ICosmosService>()!.GetCustomersByLoyaltyTier(searchValue);
-          case "DateOfMostRecentStay":
-              return await app.Services.GetService<ICosmosService>()!.GetCustomersWithStaysAfterDate(DateTime.Parse(searchValue));
-          default:
-              throw new Exception("Invalid search criterion. Valid search criteria include 'CustomerName', 'LoyaltyTier', and 'DateOfMostRecentStay'.");
-      }
-  })
-  ```
+     ![Filling in details for the new environment variable for an Azure App Service](../../media/Solution/0301_AddEnvironmentVariable2.png)
 
 </details>
